--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 .firma-n{
   font-family: 'Permanent Marker', cursive;
 }
+
+.text-Permanent{
+  font-family: 'Permanent Marker', cursive;
+}
 body{
   font-family: 'Raleway', sans-serif;
 }
@@ -9,7 +13,7 @@ header {
   background-image: url('../img/header.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: left;
+  background-position: center;
   padding-bottom: 10rem;
 }
 
@@ -20,4 +24,8 @@ header {
 
 .carousel-indicators li {
   background-color: black;
+}
+
+.color-icono{
+  color: white;
 }
