--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,12 @@ body{
 }
 
 header {
-  background-image: url('../img/header.jpg');
+  background-image: url('../img/tecnologia.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   padding-bottom: 10rem;
+  padding-top: 10rem;
 }
 
 .text-bottom{
