--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body{
 }
 
 header {
-  background-image: url('../img/header.jpg');
+  background-image: url('../img/tecnologia.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
