--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,12 @@ body{
 }
 
 header {
-  background-image: url('../img/tecnologia.jpg');
+  background-image: url('../img/tecnologia.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   padding-bottom: 10rem;
+  padding-top: 10rem;
 }
 
 .text-bottom{
@@ -30,7 +31,6 @@ header {
 .carousel-indicators li {
   background-color: black;
 }
-
 .color-icono{
   color: white;
 }
